allow generating facility stat report
