# internal/v1/stats/main.go
@@ -6,4 +6,5 @@ func Routes(r *gin.RouterGroup) {
 	r.GET("/online", getOnlineATC)
 	r.GET("/historical", getHistoricalStats)
 	r.GET("/historical/:year/:month", getHistoricalStats)
+	r.GET("/reports/facility", getFacilityReport)
 }
